// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar should render with css prop 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  border-radius: 50%;
  border: 1px solid grey;
}

.c1 {
  overflow: hidden;
  width: 150px;
  height: 150px;
  border-radius: 50%;
}

<div
  className="vital__avatar c0"
>
  <div
    className="vital__avatar-image-wrapper c1"
    size={150}
  >
    <svg
      height={150}
      viewBox="0 0 124 124"
      width={150}
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M0 0h124v124H0z"
          fill="#7189B6"
        />
        <circle
          cx={62}
          cy={41}
          fill="#FFF"
          r={18}
        />
        <path
          d="M28 102c0-19.882 15.222-36 34-36s34 16.118 34 36H28z"
          fill="#FFF"
        />
      </g>
    </svg>
  </div>
</div>
`;

exports[`Avatar should render with default styles 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  overflow: hidden;
  width: 32px;
  height: 32px;
  border-radius: 3px;
}

<div
  className="vital__avatar c0"
>
  <div
    className="vital__avatar-image-wrapper c1"
    size="medium"
  >
    <svg
      height="32px"
      viewBox="0 0 124 124"
      width="32px"
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M0 0h124v124H0z"
          fill="#7189B6"
        />
        <circle
          cx={62}
          cy={41}
          fill="#FFF"
          r={18}
        />
        <path
          d="M28 102c0-19.882 15.222-36 34-36s34 16.118 34 36H28z"
          fill="#FFF"
        />
      </g>
    </svg>
  </div>
</div>
`;

exports[`Avatar should render with number size prop 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  overflow: hidden;
  width: 150px;
  height: 150px;
  border-radius: 3px;
}

<div
  className="vital__avatar c0"
>
  <div
    className="vital__avatar-image-wrapper c1"
    size={150}
  >
    <svg
      height={150}
      viewBox="0 0 124 124"
      width={150}
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M0 0h124v124H0z"
          fill="#7189B6"
        />
        <circle
          cx={62}
          cy={41}
          fill="#FFF"
          r={18}
        />
        <path
          d="M28 102c0-19.882 15.222-36 34-36s34 16.118 34 36H28z"
          fill="#FFF"
        />
      </g>
    </svg>
  </div>
</div>
`;

exports[`Avatar should render with theme props 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  overflow: hidden;
  width: 20px;
  height: 20px;
  border-radius: 3px;
}

<div
  className="vital__avatar c0"
>
  <div
    className="vital__avatar-image-wrapper c1"
    size="xsmall"
  >
    <svg
      height="16px"
      viewBox="0 0 124 124"
      width="16px"
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M0 0h124v124H0z"
          fill="#7189B6"
        />
        <circle
          cx={62}
          cy={41}
          fill="#FFF"
          r={18}
        />
        <path
          d="M28 102c0-19.882 15.222-36 34-36s34 16.118 34 36H28z"
          fill="#FFF"
        />
      </g>
    </svg>
  </div>
</div>
`;
